# Stratum

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  anytype_proompt.md  imgui.ini
.github/workflows/: build.yml  generate-docs.yml
assets/shaders/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_pbr.frag  mesh_pbr.frag.spv  mesh_pbr.vert  mesh_pbr.vert.spv
docs/: Makefile  architecture.md  c4-architecture.puml  c4-diagrams.md  generate-pdf.sh  gpu_rendering_implementation_plan.md  osm_procgen_plan.txt  roadmap.md
docs/plans/: shadow_implementation.md
src/: main.cpp
src/core/: application.cpp  application.hpp  window.cpp  window.hpp
src/editor/: camera.cpp  camera.hpp  editor.cpp  editor.hpp  im3d_impl.cpp  im3d_impl.hpp
src/editor/panels/: osm_panel.cpp  procgen_panel.cpp
src/osm/: coordinates.cpp  coordinates.hpp  mesh_builder.cpp  mesh_builder.hpp  parser.cpp  parser.hpp  tile_manager.cpp  tile_manager.hpp  types.hpp
src/procgen/: noise.cpp  noise.hpp  terrain_generator.cpp  terrain_generator.hpp  terrain_mesh_builder.cpp  terrain_mesh_builder.hpp  terrain_tile_manager.cpp  terrain_tile_manager.hpp
src/renderer/: gpu_renderer.cpp  gpu_renderer.hpp  mesh.hpp
